gccida/g0/c_add_case_label
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3800:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3801:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3802:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3803:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3806:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *case_label; // [rsp+28h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3807:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *duplicate; // [rsp+30h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3810:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+48h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3880:28: error: expected expression
duplicate = *( tree_node **)( node->value + 48); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/c-common.c:3880:16: error: use of undeclared identifier 'tree_node'
duplicate = *( tree_node **)( node->value + 48); 
               ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_add_case_label/src/obj/c-common.o] Error 1
